<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_header_setting"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_arrow_back_ios_24_black"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:text="@string/setting"
                    android:textColor="#252932"
                    android:textSize="20sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">
                <TextView
                    android:id="@+id/lang_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/bg_item_setting"
                    android:drawableStart="@drawable/ic_lang_setting"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center_vertical"
                    android:text="@string/language_option"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="UseCompatTextViewDrawableXml" />

                <TextView
                    android:id="@+id/stamp_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/bg_item_setting"
                    android:drawableStart="@drawable/ic_stamp_v2"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center_vertical"
                    android:text="@string/setting_stamp_options"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="UseCompatTextViewDrawableXml" />

                <TextView
                    android:id="@+id/rate_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/bg_item_setting"
                    android:drawableStart="@drawable/ic_rate_setting"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center_vertical"
                    android:text="@string/rate_us"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="UseCompatTextViewDrawableXml" />

                 <TextView
                    android:id="@+id/privacy_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/bg_item_setting"
                    android:drawableStart="@drawable/ic_policy_setting"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center_vertical"
                    android:text="@string/private_policy"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="UseCompatTextViewDrawableXml" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
