<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/header_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_permission"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_bold"
                android:gravity="start"
                android:text="@string/permission"
                android:textColor="#1E252B"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"
                android:text="@string/go"
                android:visibility="gone"
                android:textColor="#F1B15E"
                android:textSize="18sp"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_permission"
            android:layout_width="214dp"
            android:layout_height="170.24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="21dp"
            android:src="@drawable/ic_permission" />

        <TextView
            android:id="@+id/description_perssion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6.76dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="@string/permission_title"
            android:textColor="#26272F"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/switch_bar_corner"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_storage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:fontFamily="@font/inter_regular"
                android:text="@string/per_storage"
                android:textColor="#252932"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/bg_thumb"
                app:track="@drawable/bg_track"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/switch_bar_corner"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:fontFamily="@font/inter_regular"
                android:text="@string/per_camera_record"
                android:textColor="#252932"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/bg_thumb"
                app:track="@drawable/bg_track"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/switch_bar_corner"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:fontFamily="@font/inter_regular"
                android:text="@string/per_location"
                android:textColor="#252932"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/bg_thumb"
                app:track="@drawable/bg_track"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/switch_bar_corner"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_body_sensor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:fontFamily="@font/inter_semibold"
                android:text="Body sensors"
                android:textColor="#252932"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/bg_thumb"
                app:track="@drawable/bg_track"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

    </LinearLayout>
</layout>