<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_nav"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="12dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/tv_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/inter_bold"
                android:textSize="18dp"
                android:text="@string/information"
                android:textColor="@color/black" />

            <RelativeLayout
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="4dp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_close" />
            </RelativeLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/color_51596C"
                android:textSize="16dp"
                />
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Img"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_marginLeft="12dp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_bold"
                android:textSize="16dp"
                android:lines="1"
                android:ellipsize="end"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/color_51596C"
                android:textSize="16dp"
                />
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="7:30, 19/08"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_bold"
                android:textSize="16dp"
                android:layout_marginLeft="12dp"
                android:lines="1"
                android:ellipsize="end"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/path"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/color_51596C"
                android:textSize="16dp"
                />
            <TextView
                android:id="@+id/tv_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="File - Image - All"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_bold"
                android:textSize="16dp"
                android:lines="1"
                android:layout_marginLeft="12dp"
                android:ellipsize="end"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/view_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/color_51596C"
                android:textSize="16dp"
                />
            <TextView
                android:id="@+id/tv_resolution"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="3024 x 3024"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_marginLeft="12dp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_bold"
                android:textSize="16dp"
                android:lines="1"
                android:ellipsize="end"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>