<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#F0F0F0"
        app:cardCornerRadius="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/manrope_bold"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/add_note"
                    android:textColor="#252E32"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_regular"
                    android:gravity="center"
                    android:text="Do you want to delete this photo?"
                    android:textColor="#252E32"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="invisible" />

            </FrameLayout>


            <EditText
                android:id="@+id/ed_note"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_border"
                android:fontFamily="@font/manrope_regular"
                android:gravity="left|top"
                android:hint="@string/note_v2"
                android:padding="@dimen/_8sdp"
                android:textColor="#252E32"
                android:textColorHint="#8B93A7"
                android:textCursorDrawable="@drawable/caret_black"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#FBE8D0"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/manrope_bold"
                        android:paddingTop="@dimen/_8sdp"
                        android:paddingBottom="@dimen/_8sdp"
                        android:text="@string/cancel"
                        android:textColor="#F1B15E"
                        android:textSize="@dimen/_14sdp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#C5C9D3"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/txt_confirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/manrope_bold"
                        android:paddingTop="@dimen/_8sdp"
                        android:paddingBottom="@dimen/_8sdp"
                        android:text="@string/confirm"
                        android:textColor="#E2E4E9"
                        android:textSize="@dimen/_14sdp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>

